tests/baselines/reference/esDecorators-classDeclaration-missingEmitHelpers-staticComputedSetter.errors.txt
main.ts(8,5): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(8,5): error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(8,5): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== main.ts (3 errors) ====
    export {}
    
    declare var dec: any;
    declare var x: any;
    
    // needs: __esDecorate, __runInitializers, __propKey
    class C {
        @dec static set [x](value: number) { }
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__propKey' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    }
    
==== tslib.d.ts (0 errors) ====
    export {}
    